--- a/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/build.gradle
+++ b/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/build.gradle
@@ -44,9 +44,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     // Use the Sceneform UX Package pre-built from Maven.
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.6.0"
