--- a/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/src/main/AndroidManifest.xml
+++ b/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
   <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
 
   <application
+      android:networkSecurityConfig="@xml/network_security_config"
       android:allowBackup="false"
-      android:icon="@drawable/ic_launcher"
+      android:icon="@drawable/arcalendar_icon"
       android:label="@string/app_name"
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="false"
