--- a/sceneform-android-sdk-1.6.0/samples/augmentedimage/build.gradle
+++ b/sceneform-android-sdk-1.6.0/samples/augmentedimage/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         google()
         jcenter()
         mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
@@ -34,6 +35,7 @@ allprojects {
         google()
         jcenter()
         mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
 
