--- a/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/build.gradle
+++ b/sceneform-android-sdk-1.6.0/samples/augmentedimage/app/build.gradle
@@ -20,7 +20,7 @@ android {
         applicationId "com.google.ar.sceneform.samples.augmentedimage"
 
         // Sceneform requires minSdkVersion >= 24.
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -63,3 +63,9 @@ dependencies {
 
 apply plugin: 'com.google.ar.sceneform.plugin'
 
+
+
+sceneform.asset('sampledata/models/chroma_key_video.obj',
+        'default',
+        'sampledata/models/chroma_key_video.sfa',
+        'src/main/res/raw/chroma_key_video')
